# ftl-number-conversion

./: .gitignore  CMakeLists.txt  README.md
src/: algo.h  big_frac.h  big_int.h  button.h  callbacks.h  config.h  dialog.h  editor.h  files.h  layout.h  main.cpp  main2.cpp
tests/: test_from_10ss.cpp  test_from_10ss.py  test_to_10ss.cpp  test_to_10ss.py  tester.py
